Changes for 1.8.0.5
* Fixed bugs in Fuel cost for units, including around loading and unloading, and moving air with carriers. (veqryn)

* More stability improvements for server games. (veqryn)

* Fixed a thread deadlock that occurs when a game ends while the battle calc is still open, resulting in triplea not returning to the host screen. (veqryn)

* Prevented battle calc's calculate button from being enabled until data has finished being copied. Also added a tool tip on the button to let the user know how much memory they have left. (veqryn)

* Fixed display issue with repairs not being recorded properly in history panel. (veqryn)

* Fixed memory leak in battle calc and game data, causing an exponential number of units to be added to saves. (veqryn)

* Fixed bug in bid placement where you could not play British units in UK Pacific territories in Global 1940/1942. (veqryn)

* Changing default host waiting time to 900 seconds (15 minutes) so that large games do not time out on people who don't know how to change the setting. (veqryn)

* Massive improvements to the new Hard AI. (redrum)

* Fixed lag and synchronization issues in the multi-threaded battle calc. Also added methods to time how long it takes to copy the game data, and use fewer threads if this takes more than 5 seconds. (veqryn)

* Fixed possible deserialization error in resource collections. (veqryn)

* Fixed bug in movement performer, which under certain rare circumstances would take all movement away from air units going from sea to land. (veqryn)

* Further work on ProAI (called Hard AI in game menu), including new methods to determine retreats in battles. (redrum)

* Fixed bug in username muting, which caused it to not work at all. (veqryn)

* Fixed issue with the game waiting on a player to click all 'OK' messages before a battle would continue. (veqryn)

* Fixed MapCreator so that it will properly send the map folder to the utility programs. (veqryn)
